--- a/server/application/templates/addstudent.html
+++ b/server/application/templates/addstudent.html
@@ -59,6 +59,19 @@
                 {{ form.teacher_two }}
             {% endif %}
         </div>
+        <div class="form-group">
+            {{ form.subject.label }}
+            {% if form.subject.errors %}
+                {{ form.subject }}
+                <div class="error">
+                    {% for error in form.subject.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+            {% else %}
+                {{ form.subject }}
+            {% endif %}
+        </div>
         <br>
         <div class="form-group">
             {{ form.submit }}
